2008-05-31 Dodji Seketeli <dodji@gnome.org>

	* configure.ac: allow deprecated constructs because of the use the
	  hash_map that is deprecated in favour of c++0x based
	  unordered_map. This is turned on only when NEMIVER_DEVEL=on is
	  set.

2008-05-28  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/persp/dbgperspective/nmv-call-stack.cc: send another
	  select-frame command if the currently-selected frame is activated in
	  addition to sending the command when the selection is changed.
	  This should close bug #535359.

================== 0.5.3 release point (done in 0.5 branch) =============

2008-05-25 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdb-engine.cc, nmv-i-debugger: 
	  Added the IDebugger::step_instruction() call to step into the
	  next machine instruction, instead of stepping into the next C
	  instruction.
	* src/persp/dbgperspective/nmv-dbg-perspective.cc:
	  (DBGPerspective::on_debugger_command_done_signal): step into the
	  next machine instruction instead of over the next instruction.
	  This might help in fixing bug #534695

2008-05-25 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdb-engine.cc:
	  (in the OnCommandDoneHandler): don't set the engine state to
	  IDebugger::READY when the command that has been DONE is
	  "detach-from-target". This should fix #534619

2008-05-18 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdb-engine.cc: emit the
	  IDebugger::detached_from_target_signal() when the inferior program
	  exits.
	* src/persp/dbgperspective/nmv-dbg-perspective.cc:
	  (DBGPerspective::on_attached_to_target_signal (bool a_is_ready)):
	  when the debugger detaches from the inferior, update the different
	  sentivity related menu states. Also stop the throbber and the
	  busy cursor.
	  (DBGPerspective::on_program_finished_signal()): make sure to
	  notify the world that we detached from target.
	  Also make sure in this case to "de-sensitivate" the menu items